--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8" />
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
-
+    <script src="p5.play.js"></script>
     <script src="matter.js"></script>
     <script src="js/Fly.js"></script>
     <script src="js/ground.js"></script>
     <script src="js/Hero.js"></script>
     <script src="js/Box.js"></script>
+    <script src="js/Monster.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
 
   </head>
