--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="js/Fly.js"></script>
     <script src="js/ground.js"></script>
     <script src="js/Hero.js"></script>
-    <script src="js/Box.js"></script>
+    <script src="js/box.js"></script>
     <script src="js/Monster.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
 
